# demo-rust-lambda

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  ci-template.yml  demo-template.yml  rust-toolchain.toml
ci-config/: buildspec-python.yml  buildspec-rust.yml
images/: .$architecture.png.bkp
nix/: flake.nix
python/lambdas/delete-wolf-ocd/: index.py
python/lambdas/get-cat-ackermann/: index.py
python/lambdas/get-dog-count/: index.py
python/lambdas/post-sheep-random/: index.py
python/layers/commons/apigatewayutils/: __init__.py  apigatewayutils.py
python/layers/commons/dynamodbsheepshed/: __init__.py  errors.py  sheep.py  sheepshed.py
python/layers/commons/utils/: __init__.py  loggingutils.py
rust/lambdas/delete-wolf-ocd/: Cargo.toml
rust/lambdas/delete-wolf-ocd/src/: main.rs
rust/lambdas/get-cat-ackermann/: Cargo.toml
rust/lambdas/get-cat-ackermann/src/: main.rs
rust/lambdas/get-dog-count/: Cargo.toml
rust/lambdas/get-dog-count/src/: main.rs
rust/lambdas/post-sheep-random/: Cargo.toml
rust/lambdas/post-sheep-random/src/: main.rs
rust/libs/dynamodb_sheep_shed/: Cargo.toml
rust/libs/dynamodb_sheep_shed/src/: lib.rs
rust/libs/lambda_apigw_commons/: Cargo.toml
rust/libs/lambda_apigw_commons/src/: errors.rs  lib.rs
rust/libs/lambda_apigw_utils/: Cargo.toml
rust/libs/lambda_apigw_utils/src/: errors.rs  lib.rs
rust/libs/lambda_commons_utils/: Cargo.toml
rust/libs/lambda_commons_utils/src/: lib.rs
rust/libs/lambda_event_utils/: Cargo.toml
rust/libs/lambda_event_utils/src/: errors.rs  lib.rs  sendevents.rs
rust/libs/sheep_shed/: Cargo.toml
rust/libs/sheep_shed/src/: errors.rs  lib.rs  sheep.rs
utils/: clear_dynamodb_table.py  cloudwatch-log-insights-filters.txt  dynamodb.local  execute_default_benches.sh  insert_sheeps.sh  invoke_cat.sh  invoke_dog.sh  invoke_wolf.sh
