[package]
name = "lambda_apigw_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_commons_utils = { path = "../lambda_commons_utils" }
lambda_http = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-sdk-dynamodb = { workspace = true }
