[package]
name = "lambda_event_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_commons_utils = { path = "../lambda_commons_utils" }
serde = { workspace = true }
aws-sdk-eventbridge = { workspace = true}
serde_type_name = { workspace = true }
thiserror = { workspace = true }
